--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container-fluid">
       <section class="row">
         <div class="col-sm-12 embed-responsive embed-responsive-16by9">
-          <video preload="auto" autoplay poster="headerVideo.jpg" loop >
+          <video id="video" preload="auto" autoplay poster="headerVideo.jpg" loop >
             <source src="headerVideo.mp4" type="video/mp4">
           </video>
         </div>
