--- a/index0.html
+++ b/index0.html
@@ -12,20 +12,24 @@
     <header class="container-fluid">
       <section class="row">
         <div class="col-sm-12 embed-responsive embed-responsive-16by9">
-          <img src="headervideo.jpg" alt="" width="100%" ></img>
+          <video id="video" preload="auto" autoplay poster="headerVideo.jpg" loop controls >
+            <source src="headerVideo.mp4" type="video/mp4">
+          </video>
         </div>
         <div id="screen"></div>
         <div id="text-container" class="text-center">
           <div id="slider1">
-            <h2>What&nbsp;are&nbsp;the&nbsp;greatest&nbsp;challenges facing&nbsp;the&nbsp;industrial&nbsp;market&nbsp;today?</h2>
-            <p>Preventing&nbsp;workforce&nbsp;injuries, maximizing&nbsp;human&nbsp;capital, hiring&nbsp;and&nbsp;retaining&nbsp;quality&nbsp;workers.</p>
+            <h2>What’s the greatest challenges facing the industrial market toady?</h2>
+            <p>Preventing workforce injuries
+            Maximizing human capital
+            Hiring and retaining quality workers</p>
           </div>
           <div id="slider2">
-            <p>From&nbsp;construction&nbsp;to&nbsp;manufacturing, the&nbsp;industrial&nbsp;market&nbsp;is&nbsp;growing at&nbsp;unprecedented&nbsp;rates&nbsp;projected&nbsp;to&nbsp;reach $500&nbsp;billion&nbsp;by&nbsp;2019.</p>
+            <p>From construction to manufacturing, the industrial market is growing at unprecedented rates projected to reach $500 billion by 2019.</p>
           </div>
           <div id="slider3">
             <br>
-            <h2>Are&nbsp;you&nbsp;ready&nbsp;to capitalize on&nbsp;this&nbsp;potetial?</h2>
+            <h2>Are you ready to capitalize on this potetial?</h2>
           </div>
         </div>
       </section>
