added video back to working text animations with overlay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header class="container-fluid">
       <section class="row">
         <div class="col-sm-12 embed-responsive embed-responsive-16by9">
-          <img src="headervideo.jpg" alt="" width="100%" ></img>
+            <!-- <img src="headervideo.jpg" alt="" width="100%" ></img> -->
+          <video id="video" preload="auto" autoplay poster="headerVideo.jpg" loop>
+            <source src="headerVideo.mp4" type="video/mp4">
+          </video>
         </div>
         <div id="screen"></div>
         <div id="text-container" class="text-center">
